--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,37 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.traffic-light{
+    width:150px;
+    height:310px;
+    margin: auto;
+}
+.top{
+    width:10px;
+    height:50px;
+    background-color: black;
+    margin: auto;
+}
+.container{
+    width: 100%;
+    height:100%;
+    background-color: black;
+}
+.red, .yellow, .green{
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    margin: auto;
+}
+.red{
+    background-color: red;
+}
+.yellow{
+    background-color: yellow;
+}
+.green{
+    background-color: green;
+}
+.selected{
+   box-shadow: 0px 0px 20px 20px rgba(255, 255, 190, .75);
+}
